--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Wola | Agencia de Publicidad y Marketing Digital en Granada
-email: your-email@example.com
+email: info@wolapublicidad.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml.
+  Somos tu Agencia de Publicidad experta en Marketing Digital. ✓ Ideas ✓ Estrategia ✓ Resultados. ⭐ Todo ello de la forma más profesional.
 baseurl: "" # the subpath of your site if applicable, e.g. /blog
 url: "https://jekyll-netlify-boilerplate.netlify.com" # the base hostname & protocol for your site, e.g. https://example.com
 
